fix: Added Template Keyword Search via GET /templates?keywords
